# vtk-boundary-surface-extraction-evaluation

./: CMakeLists.txt  README.md
parClassifier/: CMakeLists.txt
parGroupedHashing/: CMakeLists.txt
parHashing/: CMakeLists.txt  main.cxx
results/: configuration.py  generate_figures.py  run_evaluation.py
seqClassifier/: CMakeLists.txt  main.cxx
seqHashing/: CMakeLists.txt  main.cxx
src/: Arguments.cxx  Arguments.h  CellFaceMinPointId.h  ExternalFacelistEvaluation.cxx  ExternalFacesHashCountFnv1a.h  ExternalFacesHashCountMinPointId.h  ExternalFacesHashFightFnv1a.h  ExternalFacesHashFightMinPointId.h  ExternalFacesHashSortFnv1a.h  ExternalFacesHashSortMinPointId.h  vtkGeometryFilterSClassifier.cxx
